--- a/intl/tray_reboot/pt_BR.po
+++ b/intl/tray_reboot/pt_BR.po
@@ -16,6 +16,10 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#:
+msgid "Quit"
+msgstr "Sair"
+
 #: reboot.c:104
 msgid "Reboot"
 msgstr "Reiniciar"
