--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 
-Quick-and-dirty systray applications
+Claudio's quick-and-dirty systray applications
+Copyright (C) 2008 Claudio Matsuoka
 
 - tray_reboot: show a reboot menu (for fastinit-based netbooks)
 - tray_keyboard: show capslock/numlock status for systems without LEDs
 
-
-Icons are from the Crystal icon set and are distributed under LGPL.
-
+tray_reboot icons are from the Crystal icon set and are distributed under
+the LGPL.
 
