--- a/intl/tray_eject/es_ES.po
+++ b/intl/tray_eject/es_ES.po
@@ -1,16 +1,16 @@
-# translation of pt_BR.po to brazilian portuguese
+# translation of es_ES.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Ednilson Miura <miura@mandriva.com>, 2008.
+# Ednilson Miura <miura@mandriva.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: es_ES\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:33-0200\n"
-"PO-Revision-Date: 2008-12-08 11:17-0200\n"
+"PO-Revision-Date: 2009-01-08 16:00-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
-"Language-Team: brazilian portuguese <en@li.org>\n"
+"Language-Team: <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,15 +18,15 @@ msgstr ""
 
 #: eject.c:141
 msgid "Safely remove"
-msgstr "Remover com segurança"
+msgstr "Retirar sin riesgo"
 
 #: eject.c:148
 msgid "Access content on"
-msgstr "Acessar conteúdo"
+msgstr "Acceder al contenido de"
 
 #: eject.c:289
 msgid "Safely remove all"
-msgstr "Remover todos"
+msgstr "Retirar todos los periféricos sin riesgo"
 
 #: eject.c:309
 msgid ""
@@ -34,5 +34,9 @@ msgid ""
 "application is likely to be using it.\n"
 "Please close the offending application\n"
 "and try again."
-msgstr "Não foi possível remover o dispositivo.\nVerifique se ele está em uso por\nalguma aplicação e tente novamente."
+msgstr ""
+"Imposible desconectar este periférico. \n"
+"Es probable que una aplicación lo esté \n"
+"utilizando. Por favor, ciérrela e \n"
+"inténtelo de nuevo"
 
