--- a/intl/tray_eject/zh_CN.po
+++ b/intl/tray_eject/zh_CN.po
@@ -1,32 +1,32 @@
-# translation of pt_BR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Ednilson Miura <miura@mandriva.com>, 2008.
+# Ednilson Miura <miura@mandriva.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: zh_CN\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:33-0200\n"
-"PO-Revision-Date: 2008-12-08 11:17-0200\n"
+"PO-Revision-Date: 2009-01-08 16:22-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
-"Language-Team: brazilian portuguese <en@li.org>\n"
+"Language-Team: Brazilian Portuguese <kde-i18n-doc@lists.kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.2\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: eject.c:141
 msgid "Safely remove"
-msgstr "Remover com segurança"
+msgstr "安全移除"
 
 #: eject.c:148
 msgid "Access content on"
-msgstr "Acessar conteúdo"
+msgstr "访问设备上的内容："
 
 #: eject.c:289
 msgid "Safely remove all"
-msgstr "Remover todos"
+msgstr "安全移除所有设备"
 
 #: eject.c:309
 msgid ""
@@ -34,5 +34,9 @@ msgid ""
 "application is likely to be using it.\n"
 "Please close the offending application\n"
 "and try again."
-msgstr "Não foi possível remover o dispositivo.\nVerifique se ele está em uso por\nalguma aplicação e tente novamente."
+msgstr ""
+"无法挂载此设备。\n"
+"有程序正在使用该设备。\n"
+"请关闭所有正在使用的程序\n"
+"并重试。"
 
