--- a/intl/tray_keyleds/fr_FR.po
+++ b/intl/tray_keyleds/fr_FR.po
@@ -1,11 +1,11 @@
-# translation of pt_BR.po to brazilian portuguese
+# translation of fr_FR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Ednilson Miura <miura@mandriva.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: fr_FR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:34-0200\n"
 "PO-Revision-Date: 2008-12-08 12:52-0200\n"
@@ -18,5 +18,5 @@ msgstr ""
 
 #: keyleds.c:87
 msgid "Quit"
-msgstr "Sair"
+msgstr "Quitter"
 
