--- a/intl/tray_mixer/it_IT.po
+++ b/intl/tray_mixer/it_IT.po
@@ -1,22 +1,26 @@
-# translation of pt_BR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Ednilson Miura <miura@mandriva.com>, 2008.
+# Ednilson Miura <miura@mandriva.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: it_IT\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:34-0200\n"
-"PO-Revision-Date: 2008-12-08 12:52-0200\n"
+"PO-Revision-Date: 2009-01-08 16:51-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
-"Language-Team: brazilian portuguese <en@li.org>\n"
+"Language-Team: Brazilian Portuguese <kde-i18n-doc@lists.kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.2\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: keyleds.c:87
+#: mixer.c:188
 msgid "Quit"
-msgstr "Sair"
+msgstr "Esci"
+
+#: mixer.c:223
+msgid "Mute"
+msgstr "No audio"
 
