--- a/intl/tray_mixer/pt_BR.po
+++ b/intl/tray_mixer/pt_BR.po
@@ -1,21 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of pt_BR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Ednilson Miura <miura@mandriva.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-05-29 07:56-0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2008-12-01 17:34-0200\n"
+"PO-Revision-Date: 2008-12-08 12:53-0200\n"
+"Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
+"Language-Team: brazilian portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
-#:
+#: mixer.c:188
 msgid "Quit"
 msgstr "Sair"
+
+#: mixer.c:223
+msgid "Mute"
+msgstr "Mudo"
+
