--- a/intl/tray_randr/it_IT.po
+++ b/intl/tray_randr/it_IT.po
@@ -1,54 +1,54 @@
-# translation of pt_BR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Ednilson Miura <miura@mandriva.com>, 2008.
+# Ednilson Miura <miura@mandriva.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: it_IT\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:35-0200\n"
-"PO-Revision-Date: 2008-12-08 12:59-0200\n"
+"PO-Revision-Date: 2009-01-08 17:04-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
-"Language-Team: brazilian portuguese <en@li.org>\n"
+"Language-Team: Brazilian Portuguese <kde-i18n-doc@lists.kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.2\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: randr.c:78
 msgid "Switch to external display"
-msgstr "Alternar para display externo"
+msgstr "Riproduci su display esterno"
 
 #: randr.c:79
 msgid "Switch to built-in display"
-msgstr "Alternar para display interno"
+msgstr "Riproduci su display integrato"
 
 #: randr.c:80
 msgid "Copy the flatpanel on the external screen"
-msgstr "Copiar a tela para o monitor externo"
+msgstr "Copiare il lavoro su uno schermo esterno"
 
 #: randr.c:81
 msgid "Use external screen to extend the panel on the left"
-msgstr "Usar monitor externo para extender o painel à esquerda"
+msgstr "Utilizzo di uno schermo esterno - sinistra"
 
 #: randr.c:82
 msgid "Use external screen to extend the panel on the right"
-msgstr "Usar o monitor externo para extender o painel à direita"
+msgstr "Utilizzo di uno schermo esterno - destra"
 
 #: randr.c:88
 msgid "Set ext. resolution to 1024x768"
-msgstr ""
+msgstr "Selezionare risoluzione 1024x768"
 
 #: randr.c:89
 msgid "Set ext. resolution to 800x600"
-msgstr "Alternar resolução externa para 800x600"
+msgstr "Selezionare risoluzione 800x600"
 
 #: randr.c:90
 msgid "Set ext. resolution to 640x480"
-msgstr "Alternar resolução externa para 640x480"
+msgstr "Selezionare risoluzione 640x480"
 
 #: randr.c:99
 msgid "Quit"
-msgstr "Sair"
+msgstr "Esci"
 
