--- a/intl/tray_reboot/es_ES.po
+++ b/intl/tray_reboot/es_ES.po
@@ -1,32 +1,32 @@
-# translation of pt_BR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Ednilson Miura <miura@mandriva.com>, 2008.
+# Ednilson Miura <miura@mandriva.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: es_ES\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:35-0200\n"
-"PO-Revision-Date: 2008-12-08 14:24-0200\n"
+"PO-Revision-Date: 2009-01-08 17:23-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
-"Language-Team: brazilian portuguese <en@li.org>\n"
+"Language-Team: Brazilian Portuguese <kde-i18n-doc@lists.kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.2\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: reboot.c:132
 msgid "Quit"
-msgstr "Sair"
+msgstr "Salir"
 
 #: reboot.c:160
 msgid "Reboot"
-msgstr "Reiniciar"
+msgstr "Reinicializar"
 
 #: reboot.c:161
 msgid "Turn off"
-msgstr "Desligar"
+msgstr "Apagar"
 
 #: reboot.c:162
 msgid "Suspend"
@@ -42,5 +42,5 @@ msgstr "Cancelar"
 
 #: reboot.c:183
 msgid "Quit session"
-msgstr "Encerrar Sessão"
+msgstr "Cerrar la sesión"
 
