--- a/intl/tray_reboot/fr_FR.po
+++ b/intl/tray_reboot/fr_FR.po
@@ -1,14 +1,14 @@
-# translation of pt_BR.po to brazilian portuguese
+# translation of fr_FR.po to brazilian portuguese
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Ednilson Miura <miura@mandriva.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: pt_BR\n"
+"Project-Id-Version: fr_FR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-01 17:35-0200\n"
-"PO-Revision-Date: 2008-12-08 14:24-0200\n"
+"PO-Revision-Date: 2008-12-08 13:03-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
 "Language-Team: brazilian portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,29 +18,29 @@ msgstr ""
 
 #: reboot.c:132
 msgid "Quit"
-msgstr "Sair"
+msgstr "Quitter"
 
 #: reboot.c:160
 msgid "Reboot"
-msgstr "Reiniciar"
+msgstr "Redémarrer"
 
 #: reboot.c:161
 msgid "Turn off"
-msgstr "Desligar"
+msgstr "Eteindre"
 
 #: reboot.c:162
 msgid "Suspend"
-msgstr "Suspender"
+msgstr "Suspendre"
 
 #: reboot.c:163
 msgid "Hibernate"
-msgstr "Hibernar"
+msgstr "Mettre en veille"
 
 #: reboot.c:164
 msgid "Cancel"
-msgstr "Cancelar"
+msgstr "Annuler"
 
 #: reboot.c:183
 msgid "Quit session"
-msgstr "Encerrar Sessão"
+msgstr "Quitter la session"
 
