--- a/intl/tray_mixer/pt_BR.po
+++ b/intl/tray_mixer/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-12-01 17:34-0200\n"
+"POT-Creation-Date: 2010-10-01 15:29-0300\n"
 "PO-Revision-Date: 2008-12-08 12:53-0200\n"
 "Last-Translator: Ednilson Miura <miura@mandriva.com>\n"
 "Language-Team: brazilian portuguese <en@li.org>\n"
@@ -16,11 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: mixer.c:188
-msgid "Quit"
-msgstr "Sair"
-
-#: mixer.c:223
+#: mixer.c:277
 msgid "Mute"
 msgstr "Mudo"
 
+#: mixer.c:277
+msgid "Capture"
+msgstr "Captura"
+
+#: mixer.c:317
+msgid "Quit"
+msgstr "Sair"
